<resources>
    <string name="app_name">Demo My Second App</string>
    <string name="welcome">Welcome to Android!</string>
    <string name="name">Name:</string>
    <string name="password">Password:</string>
    <string name="login">Login</string>
    <string name="cancel">cancel</string>
    <string name="registration_form">Registration Form</string>
    <string name="welcome_club">Welcome to Adventure Learning Club!</string>
    <string name="full_name">Full Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="student_id">Student ID</string>
    <string name="school">School</string>
    <string name="e_mail">E-mail</string>
    <string name="phone">Phone</string>
    <string name="register">register</string>
    <string name="textview">This is a TextView</string>
    <string name="welcome_to_android">Welcome to Android!</string>
    <string name="button">Button</string>
</resources>